# drawly

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE_HEADER  README.md  brainstorm.rnote  brainstorm2.rnote  flake.nix  package.nix  run.sh  texttool.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-windows.yml
deploy/flatpak/: io.github.prayag2.Drawy.yaml
docs/uml/: todo  uml-plan.puml  uml.puml
src/: keybinding-plan.txt  main.cpp
src/canvas/: canvas.cpp  canvas.h
src/command/: command.h  commandhistory.cpp  commandhistory.h  insertitemcommand.cpp  insertitemcommand.h  itemcommand.cpp  itemcommand.h  moveitemcommand.cpp  moveitemcommand.h  removeitemcommand.cpp  removeitemcommand.h  updatepropertycommand.cpp  updatepropertycommand.h
src/common/: constants.h  renderitems.cpp  renderitems.h  utils.h
src/components/: actionbar.cpp  actionbar.h  canvas.cpp  canvas.h  cbutton.cpp  cbutton.h  ctoolbar.cpp  ctoolbar.h  propertybar.cpp  propertybar.h  toolbar.cpp  toolbar.h  wrapper.cpp  wrapper.h
src/context/: applicationcontext.cpp  applicationcontext.h  coordinatetransformer.cpp  coordinatetransformer.h  renderingcontext.cpp  renderingcontext.h  selectioncontext.cpp  selectioncontext.h  spatialcontext.cpp  spatialcontext.h  uicontext.cpp  uicontext.h
src/controller/: controller.cpp  controller.h
src/data-structures/: cachegrid.cpp  cachegrid.h  orderedlist.cpp  orderedlist.h  quadtree.cpp  quadtree.h  quadtree.ipp
src/event/: event.cpp  event.h
src/iconmanager/: iconmanager.cpp  iconmanager.h
src/item/: arrow.cpp  arrow.h  ellipse.cpp  ellipse.h  freeform.cpp  freeform.cpp_0  freeform.h  item.cpp  item.h  line.cpp  line.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  text.cpp  text.h
src/item/factory/: arrowfactory.cpp  arrowfactory.h  ellipsefactory.cpp  ellipsefactory.h  freeformfactory.cpp  freeformfactory.h  itemfactory.cpp  itemfactory.h  linefactory.cpp  linefactory.h  rectanglefactory.cpp  rectanglefactory.h  textfactory.cpp  textfactory.h
src/item/properties/: fill.cpp  fill.h  font.h  itemproperty.cpp  itemproperty.h  stroke.cpp  stroke.h
src/keybindings/: action.cpp  action.h  actionmanager.cpp  actionmanager.h  keybindmanager.cpp  keybindmanager.h
src/properties/: property.cpp  property.h
src/properties/widgets/: erasersizewidget.cpp  erasersizewidget.h  fontsizewidget.cpp  fontsizewidget.h  propertymanager.cpp  propertymanager.h  propertywidget.cpp  propertywidget.h  strokecolorwidget.cpp  strokecolorwidget.h  strokewidthwidget.cpp  strokewidthwidget.h
src/resources/: res.qrc  style.qss
src/serializer/: loader.cpp  loader.h  serializer.cpp  serializer.h
src/shapes/: arrow.cpp  arrow.h  draggableshape.cpp  draggableshape.h  ellipse.cpp  ellipse.h  eraser.cpp  eraser.h  line.cpp  line.h  rectangle.cpp  rectangle.h  selection.cpp  selection.h  shape.cpp  shape.h  stroke.cpp  stroke.h
src/tools/: arrowtool.cpp  arrowtool.h  drawingtool.cpp  drawingtool.h  ellipsetool.cpp  ellipsetool.h  erasertool.cpp  erasertool.h  freeformtool.cpp  freeformtool.h  linetool.cpp  linetool.h  movetool.cpp  movetool.h  polygondrawingtool.cpp  polygondrawingtool.h  rectangletool.cpp  rectangletool.h  selectiontool.cpp  selectiontool.h  texttool.cpp  texttool.h  tool.cpp  tool.h
src/tools/properties/: propertymanager.cpp  propertymanager.h  toolerasersize.cpp  toolerasersize.h  toolfontsize.cpp  toolfontsize.h  toolproperty.cpp  toolproperty.h  toolstrokecolor.cpp  toolstrokecolor.h  toolstrokewidth.cpp  toolstrokewidth.h
src/tools/selectiontool/: selectiontool.cpp  selectiontool.h  selectiontoolmovestate.cpp  selectiontoolmovestate.h  selectiontoolselectstate.cpp  selectiontoolselectstate.h  selectiontoolstate.h
src/window/: boardlayout.cpp  boardlayout.h  window.cpp  window.h
(+3 files in other folders)
